Added tests for todo routes.
