# routes/todo.js
@@ -7,7 +7,6 @@ router.get('/findByUserId/:uid', (req, res) => {
 });
 
 router.get('/findById/:id', (req, res) => {
-  console.log(req.params.id)
   todoController.findById(req, res);
 });
 
@@ -19,10 +18,6 @@ router.get('/findByType/:type', (req, res) => {
   todoController.findByType(req, res);
 });
 
-router.get('/findByTitle/:title', (req, res) => {
-  todoController.findByTitle(req, res);
-});
-
 router.post('/', (req, res) => {
   todoController.addTodoItem(req, res);
 });
@@ -32,7 +27,6 @@ router.put('/:id', (req, res) => {
 });
 
 router.delete('/:todoId', (req, res) => {
-  console.log(req.params.todoId)
   todoController.deleteTodoItem(req, res);
 });
 
